# xy_argparse

./: MANIFEST.in  README.md  pyproject.toml  setup.py
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
test/: main.py
xy_argparse/: ArgParse.py  ModuleData.py  Resource.py  Runner.py
xy_argparse/execute/: Main.py
